# Sauron-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
example/: CMakeLists.txt  main.cpp
helper/: set_cmake_env.ps1  set_cmake_env.sh
sauron-sdk-curl/: CMakeLists.txt  README.md
sauron-sdk-curl/cmake/: FindSauronSDK.cmake  SauronSDKConfig.cmake  sauron-sdk-curl-config.cmake.in  setup-gtest.cmake
sauron-sdk-curl/include/client/: http_client_curl.cpp  http_client_curl.hpp
sauron-sdk-curl/include/sauron/client/: http_client_curl.cpp  http_client_curl.hpp
